repaired the login signup button as they were overlapping

--- a/LOGIN_REGISTER/homepage.css
+++ b/LOGIN_REGISTER/homepage.css
@@ -10,7 +10,7 @@ body {
   backdrop-filter: blur(50px);
 }
 nav{
-    backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);
   background: transparent;
   position: fixed;
   display: flex;
@@ -24,6 +24,9 @@ nav{
 .logo img{
     width: 200px;
 }
+.userAuth{
+  display: flex;
+}
 .userAuth button{
     border: 2px solid white;
     background: inherit;
@@ -31,6 +34,7 @@ nav{
     padding: 13px;
     border-radius: 24px;
     width: 150px;
+    margin-right: 10px;
 }
 .header {
   min-height: 100vh;
